--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,11 @@
   --text-color-primary:#313131;
   --text-color-secondary:#6C6C6C;
 
+  --font-family: "Poppins", sans-serif;
+  --text: 16px/150% var(--font-family);
+  --text-lg: bold 32px/125% var(--font-family);
+  --text-md: 14px/175% var(--font-family);
+  --text-sm: 12px/175% var(--font-family);
 }
 
 body{
